# SZE-ProjektMunka2-gmpl2latex

./: Constraint.hpp  Documentation.md  HowTo.md  HtmlOutput.cpp  HtmlOutput.hpp  LatexOutput.cpp  LatexOutput.hpp  Makefile  Objective.hpp  README.md  SampleOutput.hpp  Variable.hpp  grammar.y  json_parser_project.h  main.cpp  tokens.l  var.json
.github/workflows/: testing.yml
Docker/test/: Dockerfile
Presentation/: GMPL2LateX-Presentation.pptx
Requirements/: complex_example.json  complex_example.mod  complex_example.tex  requirement.md  simple_example.html  simple_example.json  simple_example.mod  simple_example.tex
Tests/: CMakeLists.txt  exp_json_out.json  exp_output.html  exp_output.tex  modvar.json  std_output.txt  test_input.mod  testing.sh  unittest.cpp
